--- a/8_2_설명포함.ipynb
+++ b/8_2_설명포함.ipynb
@@ -58,11 +58,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "C8FRcQ70MdsL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C8FRcQ70MdsL",
+        "outputId": "eb82fda1-6435-4cfd-ece0-300aa9595242"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "29515/29515 [==============================] - 0s 1us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26421880/26421880 [==============================] - 1s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "5148/5148 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4422102/4422102 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ],
       "source": [
         "from tensorflow import keras\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -86,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "RH3iNFTnMdsL"
       },
@@ -97,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "0rhqnndpMdsM"
       },
@@ -109,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "shtiJ73fMdsM"
       },
@@ -120,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "DVfak7ksMdsM"
       },
@@ -285,9 +304,10 @@
         "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics='accuracy')\n",
         "\n",
         "checkpoint_cb = keras.callbacks.ModelCheckpoint('best-cnn-model.h5')\n",
+        "# 가장좋은 모델의 시간\n",
         "early_stopping_cb = keras.callbacks.EarlyStopping(patience=2,\n",
         "                                                  restore_best_weights=True)\n",
-        "\n",
+        "##patience는 가장 좋을때 2번 참기\n",
         "history = model.fit(train_scaled, train_target, epochs=20,\n",
         "                    validation_data=(val_scaled, val_target),\n",
         "                    callbacks=[checkpoint_cb, early_stopping_cb])"
